# urbancool_melbourne

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
app/: build_static.py  core.py  main.py
app/static/: script.js  styles.css
app/templates/: index_template.html
config/: settings.yaml
data/interim/: sa2_boundaries.parquet
data/processed/: feature_matrix.csv  feature_matrix_sa1.csv  predictions_sa2.csv
models/: feature_importance.csv  model_info.json  test_metrics.json
notebooks/: 01_data_exploration.ipynb  02_feature_engineering.ipynb  03_model_training.ipynb  04_shap_analysis.ipynb
src/data/: download.py  loaders.py  validation.py
src/features/: _utils.py  spatial.py  urban_morphology.py  vegetation.py
src/models/: feature_columns.py  predict.py  train.py
src/visualization/: maps.py
tests/: conftest.py  test_api.py  test_features.py  test_pipeline.py
